# crawler

./: .env.example  .env.firecrawl.example  .gitignore  .gitmodules  CLAUDE.md  README.md  compose.yaml  lovable-docs.md  pyproject.toml
.claude/: settings.local.json
.github/instructions/: commitMessageGeneration.instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
specs/002-python3-uv-n/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-python3-uv-n/checklists/: requirements.md
specs/002-python3-uv-n/contracts/: cli-interface.md  firecrawl-v2-scrape-api.yaml
specs/003-markdown-summary-ai/: IMPLEMENTATION_GUIDE.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/003-markdown-summary-ai/checklists/: requirements.md
specs/003-markdown-summary-ai/contracts/: cli-summarize.md  litellm-api.md
src/cli/: main.py  scrape.py  summarize.py
src/config/: prompts.py  settings.py
src/lib/: exceptions.py  validators.py
src/models/: ai_model_config.py  ai_summary.py  article_content.py  output_file.py  scrape.py  summarize_request.py
src/services/: ai_service.py  firecrawl.py  output.py  prompt_service.py
tests/contract/: test_firecrawl_api.py
tests/integration/: test_file_output.py  test_scrape_command.py
tests/unit/: test_config.py  test_exceptions.py  test_firecrawl.py  test_models.py  test_output.py  test_validators.py
tests/unit/cli/: test_summarize.py
tests/unit/models/: test_ai_model_config.py  test_ai_summary.py  test_article_content.py  (+2 more)
(+2 files in other folders)
